--- a/build
+++ b/build
@@ -1,2 +1,3 @@
-build_id=w0csaoCUoQq2dewyWdRn5T6kLAiWdZI3
-push_ts=1770425360.2313814
+build_id=GcV9pF8SKgg0ErzNPbHFNjPE47Igmgqy
+push_ts=1770442727.658014
+mode=full
