--- a/build
+++ b/build
@@ -1,3 +1,3 @@
-build_id=GcV9pF8SKgg0ErzNPbHFNjPE47Igmgqy
-push_ts=1770442727.658014
-mode=full
+build_id=F4IcLTkxReN1aXOcxJmD95hnE40wIG2G
+push_ts=1770443942.422174
+mode=warm
