--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -68,7 +68,7 @@ jobs:
           source ./build
           
           # Reset benchmark marker
-          cat > app/benchmark-marker.tsx << 'MARKER'
+          cat > app/bench/marker.tsx << 'MARKER'
           // Marker: baseline
           export function BenchmarkMarker() {
             return <span data-benchmark="baseline" style={{ display: 'none' }} />
@@ -111,7 +111,7 @@ jobs:
           fi
           
           # Modify file to trigger rebuild
-          cat > app/benchmark-marker.tsx << EOF
+          cat > app/bench/marker.tsx << EOF
           // Marker: ${build_id}-incr-$(date +%s)
           export function BenchmarkMarker() {
             return <span data-benchmark="${build_id}-incr" style={{ display: 'none' }} />
