--- a/build
+++ b/build
@@ -1,3 +1,3 @@
-build_id=rtKe16oGIvJqHe8fP46t4dfTl7WBydGy
-push_ts=1770497549.8362467
-mode=incremental
+build_id=7rpEQ5T98odg7R6D4RGGGWD8ww0CAH8G
+push_ts=1770515451.9657743
+mode=full
