--- a/build
+++ b/build
@@ -1,3 +1,3 @@
-build_id=k3CthK0E3Op88o0NU3ngAygp46iTVxfQ
-push_ts=1770524112.9209442
-mode=full
+build_id=0SscISTUvXpJwxg3Pb3q4f8P2YPkIsp1
+push_ts=1770525627.4939864
+mode=warm
