--- a/build
+++ b/build
@@ -1,3 +1,3 @@
-build_id=r5GTq3ev9mjerQjj92yVAA6S7sdGTR0j
-push_ts=1770768932.5866945
-mode=full
+build_id=LoTDMrnAos7bgvNjTCC2Dxe45lxOIxTY
+push_ts=1770777818.410591
+mode=warm
