--- a/build
+++ b/build
@@ -1,3 +1,3 @@
-build_id=Bo8gfD8Sba4AtuKllzV5sYmA9OZZyME7
-push_ts=1771027877.8996632
-mode=full
+build_id=eezMFOzLT2KKNONCzEcg52RBI7t2CxfB
+push_ts=1771036733.5342565
+mode=warm
